full image links

--- a/_pages/book.html
+++ b/_pages/book.html
@@ -11,7 +11,7 @@ permalink: /book/
                 </p>
                 <h2>The bad news</h2>
                 <p>
-                    <img src="/images/research.gif" style="width:200px;float:right"/>
+                    <img src="{{ site.baseurl }}/images/research.gif" style="width:200px;float:right"/>
                     Learning the complex C++ API for addon development is <b><u>hard</u></b>.  Answers are spread across a few blog <a target="_blank" href="http://blog.scottfrees.com/c-processing-from-node-js-part-4-asynchronous-addons"> posts </a> and <a target="_blank" href ="http://v8.paulfryzel.com/docs/master/">terse documentation</a>.  If you are looking for a step-by step and simple explanation, <b>you'll be looking for a long time!</b> Worse yet - since the V8 API changes so frequently, it's hard to blend all these resources together in a comprehensible and consistent way.
                 </p>
                 <h2>The solution</h2>
@@ -179,7 +179,7 @@ permalink: /book/
             <div class="page_content">
                 <h1 class="target">About Me</h1>
                 <div class="profile">
-                    <img style="border-radius:5px" width="200" src="/images/sp.jpg"/>
+                    <img style="border-radius:5px" width="200" src="{{ site.baseurl }}/images/sp.jpg"/>
                 </div>
 
                 <p>I am a <a href="http://pages.ramapo.edu/~sfrees" target="_blank">Professor of Computer Science</a> at Ramapo College of New Jersey, specializing in computer graphics, and web development.  I'm also a consultant and freelance developer, with over ten years of professional experience.</p>
