--- a/_pages/book.html
+++ b/_pages/book.html
@@ -2,8 +2,19 @@
 layout: default
 title:  "Node and C++ Integration - Ebook"
 permalink: /book/
+sidebar: false
 ---
-        <div class="page">
+        <div class="page1">
+            <div class="page_content">
+            <div style="float:left; text-align:center">
+            <img class="book-img" style="height:275px" src="{{ site.baseurl }}/images/book-thumbnail-256.png"/>
+            </div>
+            <h2 style="font-size:24pt;padding-left:275px">C++ and Node.js Integration</h2>
+            <p style="font-size:16pt;padding-left:275px;">The popularity of Node.js just keeps surging, it's great for so many things. But what if you need serious C/C++ speed? What if you want to move to Node.js, but can't afford to rewrite your existing C++ code?</p>
+            <p style="padding-left:275px;"><a href="https://gum.co/dTVf" class="myButton">Buy now!</a></p>
+        </div>
+        </div>
+        <div class="page1">
             <div class="page_content">
                 <h2>The good news...</h2>
                 <p>
@@ -17,6 +28,7 @@ permalink: /book/
                 <h2>The solution</h2>
                 <p> <b>That's what this book is all about</b> - I've put together a comprehensive manual for creating your C++ addon.  Ranging from simple synchronous examples, asynchronous C++ modules and object oriented designs, to defending yourself against changing API's - "C++ and Node.js Integration" will get you to the finish line.  And it will save you weeks of research time!
                 </p>
+            </div>
         </div>
         <div class="page page_odd">
             <div class="page_content">
