--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -2,12 +2,14 @@
 layout: default
 title:  "C++ Addons Blog"
 permalink: /blog/
+sidebar : true
+blog: true
 ---
 
-<h1>Blog Posts</h1>
+
   <ul class="posts">
     {% for post in site.posts %}
-      <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> - <span>{{ post.date | date: "%m/%d/%Y" }}</span>
+      <li><a class="title" href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> - <span>{{ post.date | date: "%m/%d/%Y" }}</span>
       {% if post.excerpt %}
     {{ post.excerpt }}
 {% endif %}
