blog posts + theme

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ sidebar : true
 ---
 
 <div id="home">
-  <h1>The Addon Cheatsheet</h1>
-  <p>Welcome!  This is a quick guide-sheet to get you started with Node.js C++ addons.  It's meant to be super-easy to skim and copy/paste into your code.  If you are looking for more explanation and depth, checkout the <b>blog</b>, the full <b>code tutorial</b>, the <b>book</b>, or best of all... <b> the complete video course</b>.
+  <h1>Addon Quickstart</h1>
+  <p>Welcome!  This is a quick guide-sheet to get you started with Node.js C++ addons.  It's meant to be super-easy to skim and copy/paste into your code.  If you are looking for more explanation and depth, checkout the <b>blog</b>, the full <b>code tutorial</b>, the <b>book</b>, or <b> the complete video course</b>.
 
   <h2>package.json</h2>
   <p>Use this when you are creating an addon so it will get built by npm install.</p>
