updated links, started quickstart

--- a/_pages/book.html
+++ b/_pages/book.html
@@ -5,6 +5,7 @@ permalink: /book/
 sidebar: false
 ---
         <div class="page1">
+            
             <div class="page_content">
             <div style="float:left; text-align:center">
             <img class="book-img" style="height:275px" src="{{ site.baseurl }}/images/book-thumbnail-256.png"/>
@@ -17,13 +18,13 @@ sidebar: false
         <div class="page1">
             <div class="page_content">
                 <h2>The good news...</h2>
-                <p>
+                 <p>
                     Fear not... you can overcome your speed or legacy code problem by writing native C++ addons for Node.js!  Once you know how, you can call your C++ code right from your Node.js code - easily and cleanly.
                 </p>
                 <h2>The bad news</h2>
                 <p>
                     <img src="{{ site.baseurl }}/images/research.gif" style="width:200px;float:right"/>
-                    Learning the complex C++ API for addon development is <b><u>hard</u></b>.  Answers are spread across a few blog <a target="_blank" href="http://blog.scottfrees.com/c-processing-from-node-js-part-4-asynchronous-addons"> posts </a> and <a target="_blank" href ="http://v8.paulfryzel.com/docs/master/">terse documentation</a>.  If you are looking for a step-by step and simple explanation, <b>you'll be looking for a long time!</b> Worse yet - since the V8 API changes so frequently, it's hard to blend all these resources together in a comprehensible and consistent way.
+                    Learning the complex C++ API for addon development is <b><u>hard</u></b>.  Answers are spread across a few blog <a target="_blank" href="/c-processing-from-node-js-part-4-asynchronous-addons"> posts </a> and <a target="_blank" href ="http://v8.paulfryzel.com/docs/master/">terse documentation</a>.  If you are looking for a step-by step and simple explanation, <b>you'll be looking for a long time!</b> Worse yet - since the V8 API changes so frequently, it's hard to blend all these resources together in a comprehensible and consistent way.
                 </p>
                 <h2>The solution</h2>
                 <p> <b>That's what this book is all about</b> - I've put together a comprehensive manual for creating your C++ addon.  Ranging from simple synchronous examples, asynchronous C++ modules and object oriented designs, to defending yourself against changing API's - "C++ and Node.js Integration" will get you to the finish line.  And it will save you weeks of research time!
@@ -78,7 +79,7 @@ sidebar: false
             <div class="page_content">
                 <h1 class="section_h1">Table of Contents</h1>
                 <p>
-                This book is a major expansion on a <a target="_blank" href="http://blog.scottfrees.com/c-processing-from-node-js">four-part series</a> on my blog on building C++ addons for Node.js.  I've expanded each of the topics into full chapters, and added four completely new chapters.  The book also contains more code examples, and coverage of the latest V8 API changes.
+                This book is a major expansion on a <a target="_blank" href="/c-processing-from-node-js">four-part series</a> on my blog on building C++ addons for Node.js.  I've expanded each of the topics into full chapters, and added four completely new chapters.  The book also contains more code examples, and coverage of the latest V8 API changes.
                 </p>
                 <div class="chapter">
                     <h2>Chapter 1:  Introduction to Node.js Addons</h2>
