quickstart draft complete

--- a/_pages/book.html
+++ b/_pages/book.html
@@ -3,6 +3,7 @@ layout: default
 title:  "Node and C++ Integration - Ebook"
 permalink: /book/
 sidebar: false
+newsletter: false
 ---
         <div class="page1">
             
