--- a/index.html
+++ b/index.html
@@ -2,125 +2,11 @@
 layout: default
 title: Node Addons
 sidebar : true
+newsletter: true
 ---
 
 <div id="home">
-  <h1>Addon Quickstart</h1>
-  <p>Welcome!  This is a quick guide-sheet to get you started with Node.js C++ addons.  It's meant to be super-easy to skim and copy/paste into your code.  If you are looking for more explanation and depth, checkout the <b>blog</b>, the full <b>code tutorial</b>, the <b>book</b>, or <b> the complete video course</b>.
-
-  <h2>Project structure</h2>
-  Always create your addon in it's own directory.  If it's going to be reusable, move that file outside of your main project directory.  
-
-  Each reusable addon needs (1) a package.json, (2) a binding.gyp, and (3) C++ source code.  If your addon isn't reusable, and isn't a standalone module, then you can omit package.json 
-
-  {% highlight plaintext %}
-    my_addon/
-      |---- package.json // (not needed if not reusable)
-      |---- binding.gyp
-      |---- addon_source.cc
-  {% endhighlight %}  
-
-  <h2>package.json</h2>
-  <p>It's almost always easier to set up your addon as an independent module.  When done this way, you can require it from your local project, and a standard `npm install` will handle the entire build process.</p>
-
-  <p>Three key things happen in package.json:  
-  <ol>
-      <li>Set `gypfile` to `true` so `npm install` builds the addon automatically.  </li>
-      <li>Set the entry point to the executable ("my_addon" below will be whatever you name your addon).</li>
-      <li>Add NAN as dependency (optional, but sort of silly not to use this!)</li>
-  </ol>
-
-  {% highlight json %}
-    {
-      "name": "my_addon",
-      "version": "0.0.0",
-      "description": "My reusable C++ addon",
-      "gypfile": true,
-      "main": "./build/Release/my_addon",
-      "license": "MIT",
-      "dependencies": {
-        "nan": "^2.3.3"
-      }
-  }
-  {% endhighlight %}  
-
-  <h2>bindings.gyp</h2>
-  The binding file is where you define your build.  If you only have one C++ file, and it's platform independent (doesn't use OS calls), then this is really straightforward.  <b>Make sure you use the right name for your addon</b> - what you put for "my_addon" needs to match what you put in package.json, and in the C++ code below).
-  
-  {% highlight json %}
-   {
-    "targets": [
-      {
-        "target_name": "my_addon",
-        "sources": [ "addon_source.cc" ],
-        "include_dirs" : [
-          "<!(node -e \"require('nan')\")"
-        ]
-      }
-    ]
-  }
-  {% endhighlight %}  
-
-  If you have platform specific source, you can add them with conditionals.  In addition, if you have compiler flags they can be added as well.  Check out my blog for more details - here's a more complicated example.
-
-  {% highlight json %}
-   {
-      "targets": [
-        {
-          "target_name": "my_addon",
-          "cflags": ["-Wall", "-std=c++11"],
-          "sources": [ "platform-independent-source.cc" ],
-          "conditions":[
-            ["OS=='linux'", {
-              "sources": [ "linux_source.cc" ]
-              }],
-            ["OS=='mac'", {
-              "sources": [ "mac_source.cc" ]
-            }],
-            ["OS=='win'", {
-              "sources": [ "windows_source.cc" ]
-            }]
-          ], 
-          "xcode_settings": {
-            "OTHER_CFLAGS": [
-              "-std=c++11"
-            ]
-          },
-          "msvs_settings": {
-            "VCCLCompilerTool": {
-              "ExceptionHandling": "1 # /EHsc"
-            }
-          },
-          "include_dirs" : [
-            "<!(node -e \"require('nan')\")"
-          ]
-        }
-      ]
-    }
-  {% endhighlight %}  
-  
-  If you are feeling adventurous, check out the <a href="https://gyp.gsrc.io/docs/UserDocumentation.md">gyp</a> documentation for all the options and use cases - however there is some chromium-only information there, so beware.
-
-  <p>Setup your course code in a c++ directory and configure for NAN</p>
-
-  <h2>NAN boilerplate for addon methods</h2>
-  <p>Start adding as many functions as you want...</p>
-
-  <h2>Converting data from JavaScript to C++ types</h2>
-  <p>Use NAN to work with JavaScript inputs in C++</p>
-
-  <h2>Moving C++ data back to JavaScript (synchronously)</h2>
-  <p>Use this for short functions that will return data right away</p>
-
-  <h2>Async boilerplate</h2>
-  <p>Use this pattern to build asynchronous addons that return data via callbacks</p>
-
-  <h2>Buffers</h2>
-  <p></p>
-
-  <h2>Including boost libraries</h2>
-
-  <h2>Prebuilt Addons</h2>
-
+  {% capture quickstart %}{% include quickstart.md %}{% endcapture %}
+  {{ quickstart | markdownify }}
 </div>
 
