--- a/_pages/book.html
+++ b/_pages/book.html
@@ -4,6 +4,9 @@ title:  "Node and C++ Integration - Ebook"
 permalink: /book/
 sidebar: false
 newsletter: false
+blog: true
+disqus_id : silvrback-scottfrees-25389
+disqus_shortname: scottfrees
 ---
         <div class="page1">
             
@@ -205,3 +208,26 @@ newsletter: false
             </div>
 
         </div>
+
+        <div class="page">
+             <div class="page_content">
+                <h1 class="target">What others are saying....</h1>
+                <div class="align_center disqus">
+                <div id="disqus_thread" style="width:94%; border:1px solid #eee; padding:20px;"></div>
+                </div>
+                <script>
+                    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                    var disqus_shortname = "{{page.disqus_shortname}}"; // required: replace example with your forum shortname
+                    var disqus_identifier = "{{ page.disqus_id }}";
+
+                    /* * * DON'T EDIT BELOW THIS LINE * * */
+                    (function() {
+                        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                    })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+             </div>
+        </div
