structured book data

--- a/_pages/book.html
+++ b/_pages/book.html
@@ -7,6 +7,15 @@ newsletter: false
 disqus_id : silvrback-scottfrees-25389
 disqus_shortname: scottfrees
 ---
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Product",
+  "description": "Complete handbook on writing and deploying Node.js C++ native addons.",
+  "name": "C++ and Node.js Integration",
+  "image": "{{ site.baseurl }}/images/book-thumbnail-256.png"
+}
+</script>
         <div class="page1">
             
             <div class="page_content">
