structured book data

--- a/_pages/book.html
+++ b/_pages/book.html
@@ -13,7 +13,14 @@ disqus_shortname: scottfrees
   "@type": "Product",
   "description": "Complete handbook on writing and deploying Node.js C++ native addons.",
   "name": "C++ and Node.js Integration",
-  "image": "{{ site.baseurl }}/images/book-thumbnail-256.png"
+  "image": "{{ site.baseurl }}/images/book-thumbnail-256.png",
+  "offers": {
+    "@type": "Offer",
+    "price": "24.99",
+    "priceCurrency": "USD"
+  },
+  "url": "https://gumroad.com/l/dTVf",
+  "logo" : "{{ site.baseurl }}/images/book.png"
 }
 </script>
         <div class="page1">
